--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
-<div style="text-align: center; margin: 2rem 0; font-family: 'Mochiy Pop P One', sans-serif;">
+<div style="text-align: center; margin: 2rem 0;">
     <div >
-        <h1>Sinhyun</h1>
+        <h1 class='sinhyun_google_font'>Sinhyun</h1>
     </div>
     <div>
         <span>nav1</span>
