--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,6 +5,6 @@
         <span>서비스 소개</span>
     </div>
     <div style="margin-top: 1rem;">
-        <h6>Sinhyun</h6>
+        <h6 class="sinhyun_google_font">Sinhyun</h6>
     </div>
 </div>
