--- a/accountapp/templates/accountapp/helloworld.html
+++ b/accountapp/templates/accountapp/helloworld.html
@@ -4,6 +4,12 @@
 
     <div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
         <h1>test</h1>
+
+        <form action="/account/hello_world/" method="post">
+            {% csrf_token %}
+            <input type="submit" class="btn btn-primary">
+        </form>
+        {{ text }}
     </div>
 
 {% endblock %}
