--- a/accountapp/templates/accountapp/helloworld.html
+++ b/accountapp/templates/accountapp/helloworld.html
@@ -2,14 +2,25 @@
 
 {% block content %}
 
-    <div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-        <h1>test</h1>
+    <div style="border-radius: 1rem; margin: 2rem; text-align: center;">
+        <h1 class='sinhyun_google_font'>Hello World Sinhyun</h1>
 
         <form action="/account/hello_world/" method="post">
             {% csrf_token %}
+
+            <div>
+                <input type="text" name="hello_world_input">
+
+            </div>
+
             <input type="submit" class="btn btn-primary">
         </form>
-        {{ text }}
+
+        {% if hello_world_output %}
+        <h1>
+            {{ hello_world_output.text }}
+        </h1>
+        {% endif %}
     </div>
 
 {% endblock %}
