--- a/accountapp/templates/accountapp/helloworld.html
+++ b/accountapp/templates/accountapp/helloworld.html
@@ -16,10 +16,12 @@
             <input type="submit" class="btn btn-primary">
         </form>
 
-        {% if hello_world_output %}
+        {% if hello_world_list %}
+        {% for hello_world in hello_world_list %}
         <h1>
-            {{ hello_world_output.text }}
+            {{ hello_world.text }}
         </h1>
+        {% endfor %}
         {% endif %}
     </div>
 
