--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,15 @@
         <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
-        <span>nav4</span>
+        {% if not user.is_authenticated %}
+<!--        로그인을 하고 나서 다음으로 넘어갈 경로, 여기서는 로그인을 하고 나면 원래 로그인 버튼을 눌렀던 그 페이지로 돌아가게끔 했다-->
+        <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
+            <span>login</span>
+        </a>
+        {% else %}
+        <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
+            <span>logout</span>
+        </a>
+        {% endif %}
     </div>
 </div>
