--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-{% block content %}
+{% load bootstrap4 %}
 
-    <div style="text-align: center">
+{% block content %}
+    <div style="text-align: center ; max-width: 500px ; margin: 4rem auto">
         <div>
             <h4>Login</h4>
         </div>
@@ -9,8 +10,9 @@
             <form action="" method="post">
                 {% csrf_token %}
 <!--                LoginView에서 기본 제공되는 View-->
-                {{ form }}
-                <input type="submit" class="btn btn-primary">
+<!--                {{ form }}-->
+                {% bootstrap_form form %}
+                <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
             </form>
         </div>
     </div>
