--- a/templates/head.html
+++ b/templates/head.html
@@ -18,4 +18,11 @@
     <!-- 위에서 load static 이라 해줬기 때문에 static 이라고 사용할 수 있음 -->
     <link rel="stylesheet", type="text/css", href="{% static 'base.css' %}">
 
+    <style>
+        @font-face {
+            font-family: 'MaruBuri-Bold';
+            src: local('MaruBuri-Bold'),
+            url("{% static 'fonts/MaruBuri-Bold.otf' %}").format("opentype");
+        }
+    </style>
 </head>
