--- a/static/base.css
+++ b/static/base.css
@@ -1,3 +1,9 @@
 .sinhyun_google_font {
     font-family: 'Mochiy Pop P One', sans-serif;
 }
+
+.aligncenter {
+    text-align: center ;
+    max-width: 500px ;
+    margin: 4rem auto
+}
