--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -15,7 +15,7 @@
     <!--        내부적으로 생긴 form 변수를 가져와서 쓰면 된다-->
             {% csrf_token %}
             {% bootstrap_form form %}
-                <input type="submit" class="btn btn-primary" >
+                <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3" >
 
         </form>
     </div>
