--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -9,6 +9,14 @@
     <h2 class="sinhyun_google_font">
       {{ target_user.username }}
     </h2>
+    {% if target_user == user %}
+    <a href="{% url 'accountapp:update' pk=user.pk %}">
+      <p>
+        Change Info
+      </p>
+    </a>
+    {% endif %}
+
   </div>
   </div>
 {% endblock %}
