--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,10 @@
         <h1 class='sinhyun_google_font'>Sinhyun</h1>
     </div>
     <div>
-        <span>nav1</span>
+        <a href="{% url 'articleapp:list' %}">
+            <span>Articles</span>
+        </a>
+
         {% if not user.is_authenticated %}
 <!--        로그인을 하고 나서 다음으로 넘어갈 경로, 여기서는 로그인을 하고 나면 원래 로그인 버튼을 눌렀던 그 페이지로 돌아가게끔 했다-->
         <a href="{% url 'accountapp:login' %}?next={{ request.path }}">
