--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -28,6 +28,9 @@
       
       {% endif %}
       <hr>
+
+      {% include 'commentapp/create.html' with article=target_article %}
+
     </div>
   </div>
 {% endblock %}
