--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -4,9 +4,17 @@
 {% block content %}
 
 <style>
+    .container{
+        padding: 0;
+        margin: 0, auto;
+    }
+
+    .container a{
+        width: 45%;
+        max-width: 250px;
+    }
+
     .container div {
-        width: 250px;
-        background-color: antiquewhite;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -22,7 +30,6 @@
 
     {% if article_list %}
     <div class="container">
-        
         {% for article in article_list %}
         <a href="{% url 'articleapp:detail' pk=article.pk %}">
             {% include 'snippets/card.html' with article=article %}
@@ -40,7 +47,7 @@
     {% include 'snippets/pagination.html' with page_obj=page_obj %}
 
     <div style="text-align: center;"> 
-        <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+        <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill mt-3 mb-3 px-3">
             Create Article
         </a>
     </div>
