--- a/templates/snippets/pagination.html
+++ b/templates/snippets/pagination.html
@@ -1,5 +1,5 @@
 <div style="text-align: center; margin: 1rem 0;">
-    {% if page_obj.has_precious %}
+    {% if page_obj.has_previous %}
     <a href="{% url 'articleapp:list' %}?page={{ page_obj.prevous_page_number }}"
         class="btn btn-secondary rounded-pill">
         {{ page_obj.previous_page_number }}
