--- a/templates/head.html
+++ b/templates/head.html
@@ -23,7 +23,7 @@
         @font-face {
             font-family: 'MaruBuri-Bold';
             src: local('MaruBuri-Bold'),
-            url("{% static 'fonts/MaruBuri-Bold.otf' %}").format("opentype");
+            /* url("{% static 'fonts/MaruBuri-Bold.otf' %}").format("opentype"); */
         }
     </style>
 </head>
