--- a/templates/snippets/pagination.html
+++ b/templates/snippets/pagination.html
@@ -1,16 +1,18 @@
 <div style="text-align: center; margin: 1rem 0;">
     {% if page_obj.has_previous %}
-    <a href="{% url 'articleapp:list' %}?page={{ page_obj.prevous_page_number }}"
+    <!-- 이렇게 url을 고정시켰었는데 url를 지우면 어떤 페이지든 상관 없이 잘 동작함 -->
+    <!-- <a href="{% url 'articleapp:list' %}?page={{ page_obj.prevous_page_number }}" -->
+    <a href="?page={{ page_obj.prevous_page_number }}"
         class="btn btn-secondary rounded-pill">
         {{ page_obj.previous_page_number }}
     </a>
     {% endif %}
-    <a href="{% url 'articleapp:list' %}?page={{ page_obj.number }}"
+    <a href="?page={{ page_obj.number }}"
         class="btn btn-secondary rounded-pill active">
         {{ page_obj.number }}
     </a>
     {% if page_obj.has_next %}
-    <a href="{% url 'articleapp:list' %}?page={{ page_obj.next_page_number }}"
+    <a href="?page={{ page_obj.next_page_number }}"
         class="btn btn-secondary rounded-pill">
         {{ page_obj.next_page_number }}
     </a>
