--- a/static/base.css
+++ b/static/base.css
@@ -7,3 +7,32 @@
     max-width: 500px ;
     margin: 4rem auto
 }
+
+
+a {
+    color: black;
+}
+
+a:hover{
+    color: black;
+    text-decoration: none;
+}
+
+a:link {
+    color: black;
+    text-decoration: none;
+}
+
+.prgmatic_header_nav{
+    margin: 0 0.5rem;
+}
+
+.prgmatic_header_navbar{
+    margin: 1rem 0;
+}
+
+@media screen and (max-width:500px) {
+    html {
+        font-size: 13px;
+    }
+}
