--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,9 @@
         <a href="{% url 'projectapp:list' %}" class="prgmatic_header_nav">
             <span>Projects</span>
         </a>
+        <a href="{% url 'subscribeapp:list' %}" class="prgmatic_header_nav">
+            <span>Subscription</span>
+        </a>
 
         {% if not user.is_authenticated %}
 <!--        로그인을 하고 나서 다음으로 넘어갈 경로, 여기서는 로그인을 하고 나면 원래 로그인 버튼을 눌렀던 그 페이지로 돌아가게끔 했다-->
