--- a/articleapp/templates/articleapp/update.html
+++ b/articleapp/templates/articleapp/update.html
@@ -2,7 +2,8 @@
 {% load bootstrap4 %}
 
 {% block content %}
-<!--    <div style="text-align: center ; max-width: 500px ; margin: 4rem auto">-->
+<script src="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/js/medium-editor.min.js"></script>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
     <div style="text-align: center ; max-width: 500px ; margin: 4rem auto">
         <div class="mb-4">
             <h4>Article Update</h4> 
@@ -19,4 +20,5 @@
 
         </form>
     </div>
+    <script>var editor = new MediumEditor('.editable');</script>
 {% endblock %}
